# New_hmm_2019

./: .gitmodules  README.md  rasberry-setup.sh
polytunnel_navigation_actions/: CMakeLists.txt  package.xml
polytunnel_navigation_actions/cfg/: RowTraversal.cfg
polytunnel_navigation_actions/config/: row_detector.yaml  row_detector_common_cfg.yaml  row_detector_ellipse_cfg.yaml  row_detector_ellipse_uv-cfg.yaml  row_traversal_cfg.yaml  row_traversal_cfg_riseholme.yaml
polytunnel_navigation_actions/launch/: row_detector.launch  row_detector_multisim.launch  row_traversal.launch  row_traversal_multisim.launch
polytunnel_navigation_actions/msg/: Obstacle.msg  ObstacleArray.msg
polytunnel_navigation_actions/resources/svm/: svm.pkl  svm.pkl_02.npy  svm.pkl_03.npy  svm.pkl_06.npy  svm.pkl_07.npy  svm.pkl_08.npy  svm.pkl_09.npy  svm.pkl_10.npy
polytunnel_navigation_actions/scripts/: in_row_trav.py  row_detector.py  row_detector_old.py  row_detector_vis.py  row_traversal_server.py
rasberry/: CHANGELOG.rst  package.xml
rasberry_actors/: CHANGELOG.rst  package.xml
rasberry_actors/config/: costmap_common_params.yaml
rasberry_actors/launch/: actor_move_base.launch  include_actors.launch  move_base.launch  spawn_actor.launch
rasberry_actors/urdf/: actor.xacro
rasberry_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
rasberry_bringup/config/: norway_robot.yaml  robot_002.yaml  robot_006.yaml  robot_007.yaml  robot_008.yaml  robot_010.yaml  robot_014.yaml  robot_015.yaml  robot_023.yaml  sentor.yaml  topological_presence_topics.yaml
rasberry_bringup/launch/: gazebo_bringup.launch  hokuyo.launch  people_perception_sensors.launch  people_perception_sensors_ouster.launch  rasberry_imu.launch  rasberry_simulation.launch  rasberry_simulation_multi.launch  rasberry_simulation_velo_k2.launch  robot_bringup.launch  robot_bringup_multisim.launch  roscore.launch  tall_robot.launch  thorvald_realtime.launch  update_footprint_from_robot_config.launch  xsens_driver.launch
rasberry_bringup/resources/: mapping.rviz  mimic_daypick.rviz  row_traversal_action.rviz  topo_config.rviz  topological_navigation.rviz  topological_navigation_multisim.rviz  topological_navigation_riseholme.rviz
rasberry_bringup/scripts/: start_sim.sh  start_sim_multi.sh  start_sim_norway_poles_robot_3.sh  start_sim_norway_poles_robot_3_sim.sh  start_sim_norway_poles_robot_5.sh  start_sim_norway_poles_robot_5_sim.sh  start_sim_norway_poles_server.sh  start_sim_norway_poles_unified.sh  (+2 more)
rasberry_compliance/: CMakeLists.txt  package.xml
rasberry_coordination/: CHANGELOG.rst  CMakeLists.txt  package.xml
rasberry_des/: CHANGELOG.rst  CMakeLists.txt  README.md  diff  package.xml
rasberry_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rasberry_gazebo/config/: actors_AB.yaml  models_AB.yaml  thorvald_world_AB.yaml
rasberry_gazebo/config/gazebo/: models_AB.yaml
rasberry_gazebo/config/move_base/: global_costmap_params.yaml  local_costmap_params.yaml
rasberry_gazebo/config/move_base/teb/: teb_planner_ros.yaml
rasberry_gazebo/launch/: actor_move_base.launch  actor_move_base_dwa.launch  amcl.launch  gazebo_single.launch  gazebo_single_AB.launch  include_actors.launch  move_base.launch  polypoles.launch  spawn_actor.launch  thorvald_world_AB.launch  world.launch  world_AB.launch
rasberry_gazebo/maps/: Norway.tmap  Norway.yaml  myOWNmap.tmap  no_go_norway_poles.yaml  norway_poles.yaml
rasberry_gazebo/models/canopy/: model.config  model.sdf
rasberry_gazebo/models/canopy_small/: model.config  model.sdf
rasberry_gazebo/models/dummy_arch/: model.config  model.sdf
rasberry_gazebo/models/food_handling_unit/: model.sdf
rasberry_gazebo/models/grass_ground_plane/materials/scripts/: grass_ground_plane.material
rasberry_gazebo/models/plant/: model.sdf
rasberry_gazebo/models/plant2/: model.config  model.sdf  plant2.dae
rasberry_gazebo/models/plant_array/: model.config  model.sdf
rasberry_gazebo/models/pole/: model.config  model.sdf
rasberry_gazebo/models/pot/: model.config  model.sdf
rasberry_gazebo/models/pot_array/: model.config  model.sdf
rasberry_gazebo/models/riseholme_enclosure/: model.config  model.sdf
rasberry_gazebo/models/tray/: model.config  model.sdf
rasberry_gazebo/models/unit_cylinder_1/: model.config  model.sdf
rasberry_gazebo/scripts/: add_to_world.py  generate_poses.py  generate_world.py  goal_publisher.py  goal_publisher_new.py
rasberry_gazebo/urdf/: actor.xacro  actor_laser.xacro  actor_model.xacro
rasberry_gazebo/worlds/: empty_grass.world  polypoles.world  polytunnel.world  polytunnels.world  real_map.world  riseholme.world  riseholme_fast.world  riseholme_new.world  riseholme_simple.world  riseholme_with_plants.world  thorvald_AB.world
rasberry_gazebo/worlds/models/dummy_arch/: model.config  model.sdf
rasberry_han/: CMakeLists.txt  package.xml  setup.py
rasberry_han/cfg/: HumanProximityMonitor.cfg
rasberry_han/config/: proximity_params.yaml
rasberry_han/launch/: human_proximity_monitor.launch
rasberry_han/resources/: group_in_polytunnel.json  group_out_row.json
rasberry_han/scripts/: proximity_monitor_node
rasberry_han/src/rasberry_han/: proximity_monitor.py  safe_actions.py
rasberry_han/tests/: fake_rviz_person_publisher.py
rasberry_move_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
rasberry_navigation/: CHANGELOG.rst  CMakeLists.txt  navsat_transform_2_gps.launch  package.xml
rasberry_optimise/: CMakeLists.txt  package.xml  setup.py
rasberry_people_perception/: CHANGELOG.rst  CMakeLists.txt  package.xml
rasberry_strawberry_picking/: readme.md
rasberry_strawberry_picking/src/strawberryLocationRos/: CMakeLists.txt
rasberry_strawberry_picking/src/strawberryLocationRos/examples/: .strawberryLocationRos_demo.cpp.swp  strawberryLocationRos_demo_gui_xy.cpp.autosave  strawberry_image_publisher.cpp
rasberry_strawberry_picking/src/strawberryLocationRos/src/: .Camera.cpp.swp  Camera.cpp
rasberry_uv/: CHANGELOG.rst  CMakeLists.txt  package.xml
toc/: CMakeLists.txt  README.md  package.xml
(+503 files in other folders)
