<?xml version="1.0"?>
<package format="2">
  <name>polytunnel_navigation_actions</name>
  <version>0.0.0</version>
  <description>The polytunnel_navigation_actions package</description>

  <maintainer email="jaime@todo.todo">jaime</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>topological_navigation</exec_depend>

  <export>

  </export>
</package>
