<?xml version="1.0"?>
<package format="2">
  <name>rasberry_gazebo</name>
  <version>0.0.1</version>
  <description>The rasberry_gazebo package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>


  <license>MIT</license>


  <!-- <url type="website">http://wiki.ros.org/rasberry_gazebo</url> -->


  <author email="marc@hanheide.net">Marc Hanheide</author>
  <author email="adambinch@gmail.com">Adam Binch</author>
  <author email="jpulidofentanes@lincoln.ac.uk">Jaime Pulido Fentanes</author>
  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>thorvald_gazebo_plugins</build_depend>
  <build_depend>thorvald_model</build_depend>

  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>thorvald_gazebo_plugins</build_export_depend>
  <build_export_depend>thorvald_model</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>thorvald_gazebo_plugins</exec_depend>
  <exec_depend>thorvald_base</exec_depend>
  <exec_depend>thorvald_model</exec_depend>
  <exec_depend>thorvald_twist_mux</exec_depend>
  <exec_depend>thorvald_teleop</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  
      <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
