<?xml version="1.0"?>
<package>
  <name>rasberry_han</name>
  <version>0.2.1</version>
  <description>This packages provides some people aware navigation nodes </description>
  <maintainer email="jose.carlos.mayoral.banos@nmbu.no">Jose Mayoral</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rasberry_optimise</run_depend>

</package>
